block image capture

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>은호❤️해니 결혼식에 초대합니다.</title>
   </head>
 
-  <body>
+  <body oncontextmenu="return false">
     <div id="root">
       <!-- Top start-->
       <div>
