modify inner HTML and CSS

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
       <!-- 예식일시 end -->
       <!-- 카카오맵  start -->
       <div class="middle-title">오시는길</div>
-      <!-- <div id="staticMap"></div> -->
+      <div class="location-info"></div>
+      <div class="location-info-address"></div>
       <div
         id="daumRoughmapContainer1724175434169"
         class="root_daum_roughmap root_daum_roughmap_landing"
