add gallery middle title

--- a/index.html
+++ b/index.html
@@ -67,12 +67,10 @@
         2025.03.22 SAT PM 12:00
       </div>
       <!-- 예식일시 end -->
+      
+      <div class="middle-title">사진첩</div>
       <div class="swiper mySwiper">
-        <div class="swiper-wrapper">
-          <!-- <div class="swiper-slide">Slide 1</div>
-          <div class="swiper-slide">Slide 2</div>
-          <div class="swiper-slide">Slide 3</div> -->
-        </div>
+        <div class="swiper-wrapper"></div>
         <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div>
       </div>
