--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/font-awesome.min.css">
 
 
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Nanum+Gothic&family=Noto+Sans+KR:wght@100..900&family=Noto+Serif+KR:wght@200..900&display=swap" rel="stylesheet">
+
     <!-- css -->
     <link rel="stylesheet" href="./src/css/index.css" />
     <script charset="UTF-8" class="daum_roughmap_loader_script" src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"></script>
@@ -44,12 +49,19 @@
       <div class="middle-title">인사말</div>
       <div style="margin: 50px auto">
         <div style="height: auto; line-height: 2rem; font-weight: 500">
-          서로가 마주보며 다져온 사랑을<br />
-          이제 함께 한 곳을 바라보며<br />
-          걸어갈 수 있는 큰 사랑으로 키우고자 합니다.<br />
-          저희 두 사람이 사랑의 이름으로<br />
-          지켜나갈 수 있게 앞날을<br />
-          축복해 주시면 감사하겠습니다.
+          사랑하는 이들에게 나란한 이름으로 보내는<br/>
+          첫 번째 편지.<br/><br/>
+          한곳을 바라보며 첫걸음을 걷는 날<br/>
+          늘 곁에서 아껴주셨던 감사한 분들을 모십니다.<br/><br/>
+          귀한 걸음으로 오셔서 축하해 주신다면<br/>
+          그날의 기쁨과 격려로<br/>
+          평생 행복한 그날을 간직하며 살겠습니다.
+<!--          서로가 마주보며 다져온 사랑을<br />-->
+<!--          이제 함께 한 곳을 바라보며<br />-->
+<!--          걸어갈 수 있는 큰 사랑으로 키우고자 합니다.<br />-->
+<!--          저희 두 사람이 사랑의 이름으로<br />-->
+<!--          지켜나갈 수 있게 앞날을<br />-->
+<!--          축복해 주시면 감사하겠습니다.-->
         </div>
         <div style=" margin: 40px auto; height: auto; line-height: 2rem; font-weight: 500;">
           귀한걸음으로 축복해주시면<br />
@@ -130,9 +142,11 @@
       <!-- 마음전할 곳 start  -->
       <div class="middle-title">축하의 마음 전하기</div>
       <div style="font-size: 0.7rem; text-align: left; padding-left: 8%">계좌번호 클릭 시 복사, 전화번호 클릭 시 전화로 연결됩니다.</div>
-      <div class="account" style="margin: 10px auto; border:1px solid black; border-radius: 10px; width: 85%">
-        <div class="grooms" style="text-align: left; display: flex; flex-direction: column"></div>
-        <div class="brides" style="text-align: left;"></div>
+      <div class="account" style="margin: 10px auto; border:1px solid #eeeeee; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border-radius: 10px; width: 85%;">
+        <div class="grooms"></div>
+      </div>
+      <div class="account" style="margin: 10px auto; border:1px solid #eeeeee; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border-radius: 10px; width: 85%">
+        <div class="brides"></div>
       </div>
       <div></div>
       <!-- 마음전할 곳 end -->
