--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
       <!-- 마음전할 곳 start  -->
       <div class="middle-title">축하의 마음 전하기</div>
-      <div style="font-size: 0.7rem; text-align: left; padding-left: 8%">계좌번호 클릭 시 복사, 전화번호 클릭 시 전화로 연결됩니다.</div>
+      <div style="font-size: 0.8rem; color: #5a5f66; text-align: center; line-height: 1rem">축하의 마음을 담아 축의금을 전달해 보세요.<br/>복사 버튼을 클릭해 계좌번호를 복사할 수 있습니다.</div>
       <div class="account" style="margin: 10px auto; border:1px solid #eeeeee; box-shadow: 0 4px 8px rgba(255,228,178, 0.1); border-radius: 2%; width: 85%;">
         <div class="grooms"></div>
       </div>
