modify main image width

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="root">
       <!-- Top start-->
       <div>
-        <img id="main-img" src="./public/assets/main-division-poto.jpeg" alt="mainImage" height="auto" />
+        <img id="main-img" src="./public/assets/main-division-poto.jpeg" alt="mainImage" height="auto" width="100%" />
       </div>
       <div style="margin: 60px auto; line-height: 1.2rem">
         <div class="main-name">
